basic structure formatted

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
-[package]
-name = "poker-website"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
+[workspace]
+members = [
+    "crates/poker_core",
+    "crates/poker_server",
+]
