--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-/target
+# Rust ignores
+/target/
+**/target/
+Cargo.lock
+**/*.rs.bk
+*.pdb
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
