--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,22 @@ Cargo.lock
 **/*.rs.bk
 *.pdb
 
+# React/Node ignores
+/frontend/node_modules/
+/frontend/.pnp
+/frontend/.pnp.js
+/frontend/coverage
+/frontend/build
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+
+
 # Environment variables
 .env
 .env.local
