--- a/crates/poker_server/Cargo.toml
+++ b/crates/poker_server/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] } # Serialization/Deserializati
 
 
 tokio = { version = "1.41.1", features = ["full"] } # Allows for asynchronous runtime, multithreading, and concurrency
+tokio-postgres = "0.7.12" # Postgres client, relational database management system
 serde_json = "1.0" # Serialization/Deserialization specifically for JSON
 
 
@@ -18,3 +19,8 @@ serde_json = "1.0" # Serialization/Deserialization specifically for JSON
 stripe-rust = "0.12.3" # For payment processing
 dotenv = "0.15" # For env variables
 chrono = "0.4" # For date and time
+
+jsonwebtoken = "9.3.0"
+argon2 = "0.5.3"
+rand = "0.8"
+thiserror = "2.0.3"
